# codebase_viewer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  codebase_viewer_report.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  cli.rs  config.rs  external.rs  main.rs  model.rs  preview.rs  selection.rs  task.rs
src/app/: actions.rs  helpers.rs  message_handling.rs  mod.rs  report_preview.rs  state.rs
src/fs/: file_info.rs  mod.rs  scanner.rs  stats.rs  token_worker.rs
src/llm/: gemini_service.rs  mod.rs  token_counter.rs
src/report/: generator.rs  html.rs  markdown.rs  mod.rs  text.rs
src/ui/: dialogs.rs  menu_bar.rs  mod.rs  preview_panel.rs  status_bar.rs  tree_panel.rs
