[package]
name = "codebase_viewer"
version = "0.1.0"
edition = "2021"
authors = ["Noah Clarkson <mrnoahclarkson@gmail.com>"]
description = "A cross-platform desktop tool written in Rust to scan, explore, and document codebases using egui."
repository = "https://github.com/noahbclarkson/codebase_viewer"
license = "Apache-2.0 OR MIT"
keywords = ["gui", "egui", "codebase", "developer-tools", "scan", "documentation", "viewer"]
categories = ["development-tools", "gui"]
readme = "README.md"
rust-version = "1.77"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
crossbeam-channel = "0.5.15"
dark-light = "2.0.0"
dirs-next = "2.0.0"
eframe = { version = "0.31.1", features = ["persistence", "glow"] }
egui = { version = "0.31.1", features = ["serde"] }
egui_extras = { version = "0.31.1", features = ["image", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rayon = "1.10"
resvg = "0.45.1"
humansize = { version = "2.1.3", features = ["impl_style"] }
ignore = "0.4.23"
log = "0.4.27"
num_cpus = "1.16.0"
once_cell = "1.21.3"
open = "5.3.2"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syntect = { version = "5.2.0", features = ["default-fancy"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "tiff"] }
regex = "1.11"
egui-phosphor = "0.9"
egui_material_icons = "0.3.0"