[package]
name = "codebase_viewer"
version = "0.2.0"
edition = "2021"
authors = ["Noah Clarkson <mrnoahclarkson@gmail.com>"]
description = "A cross-platform desktop tool written in Rust to scan, explore, and document codebases using egui."
repository = "https://github.com/noahbclarkson/codebase_viewer"
license = "Apache-2.0 OR MIT"
keywords = ["gui", "egui", "codebase", "developer-tools", "scan", "documentation", "viewer"]
categories = ["development-tools", "gui"]
readme = "README.md"
rust-version = "1.77"

[workspace.lints.rust]
unsafe_code = "deny"
elided_lifetimes_in_paths = "warn"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"
broken_intra_doc_links = "warn"

# See also clippy.toml
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# --- Allowed Lints ---
# Stuff that is too noisy or we disagree with
# pedantic:
cognitive_complexity = "allow"
fallible_impl_from = "allow"
future_not_send = "allow" # noisy in async code
let_underscore_untyped = "allow"
manual_string_new = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_else = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
# nursery:
missing_const_for_fn = "allow"
# all:
if_same_then_else = "allow"
needless_pass_by_value = "allow" # can make for more readable code
# cargo:
cargo_common_metadata = "allow"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
crossbeam-channel = "0.5.15"
dark-light = "2.0.0"
dirs-next = "2.0.0"
eframe = { version = "0.31.1", features = ["persistence", "glow"] }
egui = { version = "0.31.1", features = ["serde"] }
egui_extras = { version = "0.31.1", features = ["image", "serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
rayon = "1.10"
resvg = "0.45.1"
humansize = { version = "2.1.3", features = ["impl_style"] }
ignore = "0.4.23"
log = "0.4.27"
num_cpus = "1.17.0"
once_cell = "1.21.3"
open = "5.3.2"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syntect = { version = "5.2.0", features = ["default-fancy"] }
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "tiff"] }
regex = "1.11.1"
egui-phosphor = "0.9"
egui_material_icons = "0.3.0"
arboard = "3.6"
parking_lot = "0.12"
tokei = "12.1.2"

[profile.release]
codegen-units = 1
lto = true